--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
+  <meta charset="UTF-8">
+  <title>TO DO LIST</title> <!--ページタイトル タブに表示される-->
+  <link href="stylesheet.css" rel="stylesheet"/>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <title>TO DO LIST</title>
   <meta name="Generator" content="Cocoa HTML Writer">
   <meta name="CocoaVersion" content="1671.5">
-  <meta charset="UTF-8" />
   <style type="text/css">
   </style>
 </head>
+
 <body>
-  <p>index page</p>
-  <p th:text="${hello}"></p>
+  <div class="header">
+    <div class="header-logo">TO DO リスト</div>
+    <div class="header-list">検索</div>
+  </div>
+  <div class="main"></div>
+
+  <h1>To do list</h1>
+  <p>index page  </p>
 
 </body>
 </html>
