--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <title>TO DO LIST</title> <!--ページタイトル タブに表示される-->
@@ -12,6 +13,7 @@
   </style>
 </head>
 
+
 <body>
   <!-- ヘッダー -->
   <div class="header">
@@ -21,12 +23,29 @@
     <div class="header-search">
       <a href=""> 検索 </a>
     </div>
+
     <h3 class="todo-message" th:text="|ToDoが${tasks.size()}件見つかりました|"></h3>
     <tr th:each="task : ${tasks}">
       <td th:text="${task.getTaskId()}"></td>
       <td th:text="${task.getName()}"></td><br>
     </tr>
+
+    <form action="/task" method="post">
+      <div>
+        <label for="name">名前</label>
+        <input type="text" id="name" name="name">
+      </div>
+      <div>
+        <label for="date">期日</label>
+        <input type="date" id="date" name="date">
+      </div>
+      <input type="submit" value="送信する">
+    </form>
+
+
+
   </div>
+
 
   <!-- メイン -->
   <div class="main">
@@ -39,13 +58,11 @@
       期限
       <input placeholder="期限を入力してください" class="period"　>
       <button type="submit" class="add-todo">ToDoの追加</button>
-
     </div>
     <div class="remain-todo"></div>
-
   </div>
 
-
-
 </body>
+
+
 </html>
