--- a/demo/src/main/resources/static/css/stylesheet.css
+++ b/demo/src/main/resources/static/css/stylesheet.css
@@ -1,9 +1,9 @@
-{\rtf1\ansi\ansicpg932\cocoartf1671\cocoasubrtf500
+/*{\rtf1\ansi\ansicpg932\cocoartf1671\cocoasubrtf500
 {\fonttbl}
 {\colortbl;\red255\green255\blue255;}
 {\*\expandedcolortbl;;}
 \paperw11900\paperh16840\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-}
+}*/
 
 
 /*　ヘッダー　*/
@@ -47,15 +47,23 @@
 }
 
 input, textarea {
-  width:700px;
+  width:600px;
   margin-top:8px;
   margin-bottom:10px;
   padding:5px;
   font-size:18px;
   border: 1px solid #000000;
 }
+
+.add {
+    font-size:18px;
+    border: 1px solid #000000;
+    width:200px;
+}
+
+
 .period {
-  width:700px;
+  width:200px;
   margin-top:8px;
   margin-bottom:10px;
   margin-left: 25px;
@@ -67,5 +75,5 @@ input, textarea {
 .add-todo {
   font-size:18px;
   float:right;
-  width:180px;
+  width:80px;
 }
