--- a/demo/src/main/resources/templates/edit.html
+++ b/demo/src/main/resources/templates/edit.html
@@ -1,20 +1,24 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ja">
+<link th:href="@{/css/stylesheet.css}" rel="stylesheet">
+
 <head>
     <meta charset="UTF-8">
     <title>ToDoの編集</title>
 </head>
 
 <body>
-    &lt;!&ndash; ヘッダー &ndash;&gt;
+    <!--  ヘッダー -->
     <div class="header">
         <div class="header-title">
-            <h1>TO DO リスト</h1>
+            <h1>TODOリスト</h1>
         </div>
         <div class="header-search">
-            <a href=""> 検索 </a>
+            <a href="/search"> 検索 </a>
         </div>
     </div>
 
+    <h2>編集画面です</h2>
+
 </body>
-</html>-->
+</html>
