--- a/demo/src/main/resources/static/css/stylesheet.css
+++ b/demo/src/main/resources/static/css/stylesheet.css
@@ -77,3 +77,12 @@ input, textarea {
   float:right;
   width:80px;
 }
+
+.remain-todo {
+    font-size:18px;
+    margin-top:8px;
+    margin-bottom:10px;
+    margin-left: 25px;
+    border: 1px solid #000000;
+
+}
