--- a/demo/src/main/resources/templates/edit.html
+++ b/demo/src/main/resources/templates/edit.html
@@ -22,19 +22,21 @@
     <div class="main">
         <h2>編集画面です</h2>
         <div class = "new-todo">
-            <p>ToDoの内容を変更します</p>
+            ToDoの内容を変更します<br>
             <form action="/edit" method="post">
                 <div>
                     <label for="name">ToDo名</label>
-                    <input type="text" id="name" name="name" placeholder="ToDo名を入力してください">
-                    <br>
+                    <input type="text" id="name" name="name" placeholder="ToDo名を入力してください" class="form">
                     <label for="date">期限</label>
                     <input type="date" id="date" name="date" class="period">
-                    <br>
-                    <input type="submit" value="更新"　class="add-todo">
+                    <input type="submit" value="更新"　naem="name" class="add-todo"><br>
+
                 </div>
             </form>
         </div>
+
+
+    <footer></footer>
 
 </body>
 </html>
