--- a/demo/src/main/resources/templates/search.html
+++ b/demo/src/main/resources/templates/search.html
@@ -19,7 +19,11 @@
     </div>
 
     <h2>検索画面です</h2>
+    <h3 th:text="|ToDoが${taskDtos.size()}件見つかりました|"></h3>
 
+
+    <footer>
+    </footer>
 
 </body>
 
