検索機能実装
検索ページから文字列を入力し、部分一致検索を実装した

--- a/demo/src/main/resources/static/css/stylesheet.css
+++ b/demo/src/main/resources/static/css/stylesheet.css
@@ -102,3 +102,23 @@ footer {
  background-color: #DCDCDC;
  height: 100px;
 }
+
+.search {
+  width:600px;
+  margin-left:100px;
+  margin-top:20px;
+  padding:5px;
+  font-size:25px;
+  border: 1px solid #000000;
+
+}
+
+.search-button {
+    background-color:#c0c0c0;
+    margin-top:20px;
+    margin-left:20px;
+    font-size:25px;
+    border: 1px solid #c0c0c0;
+    width:200px;
+
+}
