top画面のタスクをid降順にした
既存タスクを作成した日時が新しい順に上から表示

--- a/demo/src/main/resources/templates/edit.html
+++ b/demo/src/main/resources/templates/edit.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
      $(function(){
         $('.header-title').click(function(){
-            alert("ok");
+            window.location.href = '/';
         });
      });
     </script>
