--- a/demo/src/main/resources/templates/search.html
+++ b/demo/src/main/resources/templates/search.html
@@ -36,6 +36,7 @@
             window.location.href = '/';
         });
     });
+
   </script>
 </head>
 
@@ -57,8 +58,9 @@
         </div>
     </form>
 
-    <div class="remain-todos">
-    <h3 class="todo-message" th:text="${findTaskDtos.size() != 0} ? 'ToDoが'+ @{{taskSize}(taskSize=${findTaskDtos.size()})} +'件見つかりました':'対象のToDoは見つかりません'"></h3>
+    <div class="remain-todos" th:if="${findTaskDtos != null}">
+        <h3 class="todo-message" th:text="${findTaskDtos.size() != 0} ? 'ToDoが'+ @{{taskSize}(taskSize=${findTaskDtos.size()})} +'件見つかりました':'対象のToDoは見つかりません'"></h3>
+        <br>
         <tr th:each="taskDto : ${findTaskDtos}" class="todo"> <!--繰り返し処理-->
             ToDo名：
             <td th:text="${taskDto.getName()}"></td><br> <!--ToDo名-->
